src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Author1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the 1st author related to this Practice Guide entry.</inlineHelpText>
        <label>Author1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product (Author1)</relationshipLabel>
        <relationshipName>Opportunity_Product_author1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the 2nd author related to this Practice Guide entry.</inlineHelpText>
        <label>Author2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product (Author2)</relationshipLabel>
        <relationshipName>Opportunity_Product_author2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the 3rd author related to this Practice Guide entry.</inlineHelpText>
        <label>Author3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product (Author3)</relationshipLabel>
        <relationshipName>Opportunity_Product_author3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Chapter to this Opportunity Line Item</inlineHelpText>
        <label>Chapter</label>
        <referenceTo>Chapter__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complete_Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Public_Product_Name__c  &amp;&quot; for &quot;&amp;  Publication__r.Name</formula>
        <inlineHelpText>Complete Product Name from the Product details.</inlineHelpText>
        <label>Complete Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>Related_Individual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Related_Individual__r.FirstName + &apos; &apos; +  Related_Individual__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_HO_Accounts_in_Product__c</fullName>
        <formula>IF(  Related_Organization__r.IsParent__c  = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count HO Accounts in Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_FY__c</fullName>
        <formula>Opportunity.Current_FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Product_Details_RE__c</fullName>
        <label>Custom Product Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Direct_Target__c</fullName>
        <formula>Sales_Target__r.Directory_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Directory_Allocated_Target__c</fullName>
        <formula>Publication_Target__r.Directory_Allocated_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Directory Allocated Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Editorial_deadline_date__c</fullName>
        <formula>Publication__r.Editorial_deadline_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Editorial deadline date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insight_Target__c</fullName>
        <formula>Sales_Target__r.Insights_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insight Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insights_Allocated_Target__c</fullName>
        <formula>Publication_Target__r.Insights_Allocated_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insights Allocated Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Opportunity Product as Location</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_text__c</fullName>
        <description>Text entry Location for the Firm Profile purchased</description>
        <inlineHelpText>Text entry Location for the Firm Profile purchased</inlineHelpText>
        <label>Location_text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Practice_Areas__c</fullName>
        <description>This should be used to capture the number of practice areas sold in an Unpublished report</description>
        <inlineHelpText>Add the number of Practice Areas covered in the Unpublished Report</inlineHelpText>
        <label>No of Practice Areas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practice_Area_Text__c</fullName>
        <description>Practice Area text for the Firm Profile purchased</description>
        <inlineHelpText>Practice Area text for the Firm Profile purchased</inlineHelpText>
        <label>Practice Area Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Practice Area for the Firm Profile purchased</description>
        <inlineHelpText>Practice Area for the Firm Profile purchased</inlineHelpText>
        <label>Practice Area</label>
        <referenceTo>Practice_Area__c</referenceTo>
        <relationshipLabel>Opportunity Product as Practice Area</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Public_Product_Name__c</formula>
        <label>Public Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <formula>Publication__r.Publication_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication Target</label>
        <referenceTo>Publication_Target__c</referenceTo>
        <relationshipLabel>Opportunity Publication Target</relationshipLabel>
        <relationshipName>Opportunity_Publication_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to the Publication being sold for this line item</description>
        <inlineHelpText>Lookup to the Publication being sold for this line item</inlineHelpText>
        <label>Publication</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Publication__c.ActiveF_RE__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <infoMessage>User must select an Active Publication.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_Books__c</fullName>
        <label>Qty Books</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ranking_Status__c</fullName>
        <formula>Related_Individual__r.Ranking_Status_RE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ranking Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person(Individual) related to Opportunity Line Item</description>
        <inlineHelpText>Person(Individual) related to Opportunity Line Item</inlineHelpText>
        <label>Related Individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product as Individual</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Firm(organization) related to Opportunity Line Item</description>
        <inlineHelpText>Firm(organization) related to Opportunity Line Item</inlineHelpText>
        <label>Related Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Lines as Related Org</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Target</label>
        <referenceTo>Sales_Target__c</referenceTo>
        <relationshipLabel>Opportunity Sales Target</relationshipLabel>
        <relationshipName>Opportunity_Sales_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity.StageName)</formula>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submissions__c</fullName>
        <inlineHelpText>Number of Submissions related to this Opportunity Product Line item</inlineHelpText>
        <label>Submissions</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_Current_FY__c</fullName>
        <description>Shows the opportunity for the current fiscal year.</description>
        <formula>IF(TODAY() &gt; DATE(YEAR(TODAY()) ,6,30),
IF(AND(Opportunity.CloseDate &gt; DATE(YEAR(TODAY()) ,6,30),Opportunity.CloseDate &lt; DATE(YEAR(TODAY())+1 ,7,1), Opportunity.CloseDate &lt;= TODAY()), TotalPrice,
0),
IF(TODAY() &lt; DATE(YEAR(TODAY()),7,1),
IF(AND(Opportunity.CloseDate &gt; DATE(YEAR(TODAY())-1 ,6,30),Opportunity.CloseDate &lt; DATE(YEAR(TODAY()),7,1), Opportunity.CloseDate &lt;= TODAY()), TotalPrice,
0),0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price Current FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Prev_FY_TO_DATE__c</fullName>
        <description>Shows the opportunity for the last fiscal YTD.</description>
        <formula>IF(TODAY() &lt; DATE(YEAR(TODAY()) ,7,1),
IF( AND(Opportunity.CloseDate &gt; DATE(YEAR(TODAY())-2 ,6,30),Opportunity.CloseDate &lt; DATE(YEAR(TODAY())-1 ,7,1), Opportunity.CloseDate &lt;= DATE(YEAR(TODAY())-1,MONTH(TODAY()),DAY(TODAY()))) , TotalPrice,
0),
IF(TODAY() &gt; DATE(YEAR(TODAY()) ,6,30),
IF( AND(Opportunity.CloseDate &gt; DATE(YEAR(TODAY())-1 ,6,30), Opportunity.CloseDate &lt; DATE(YEAR(TODAY()),7,1), Opportunity.CloseDate &lt;= DATE(YEAR(TODAY())-1,MONTH(TODAY()),DAY(TODAY()))) , TotalPrice,
0),0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price Prev FY TO DATE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Prev_FY__c</fullName>
        <description>Shows the opportunity for the last fiscal year.</description>
        <formula>IF(TODAY() &lt; DATE(YEAR(TODAY()) ,7,1),
IF( AND(Opportunity.CloseDate &gt; DATE(YEAR(TODAY())-2 ,6,30),Opportunity.CloseDate &lt; DATE(YEAR(TODAY())-1 ,7,1)) , TotalPrice,
0),
IF(TODAY() &gt; DATE(YEAR(TODAY()) ,6,30),
IF( AND(Opportunity.CloseDate &gt; DATE(YEAR(TODAY())-1 ,6,30),Opportunity.CloseDate &lt; DATE(YEAR(TODAY()) ,7,1)) , TotalPrice,
0),0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price Prev FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Publication_cannot_be_blank</fullName>
        <active>true</active>
        <description>Publication cannot be left blank</description>
        <errorConditionFormula>AND(ISBLANK(Publication__c),ISBLANK(  Opportunity.Publication_RE__c  ))</errorConditionFormula>
        <errorMessage>Publication must be linked to each Product Line item when the Opportunity Publication field is left blank.  You can set a default Opportunity Publication by looking up the Publication on the Opportunity record instead of setting it at the line item.</errorMessage>
    </validationRules>
</CustomObject>